--- a/olivemusic.html
+++ b/olivemusic.html
@@ -14,7 +14,7 @@
 
     body {
       font-family: 'Poppins', sans-serif;
-      background: url('https://cdn.discordapp.com/attachments/1385741129777021050/1402245697595510805/Background_1.png?ex=68933692&is=6891e512&hm=be4d95e67a7dc0afadb54e72641640647ee59715643450b36064d14ba9925028&') no-repeat center center fixed;
+      background: url('https://files.catbox.moe/ey5tqd.png') no-repeat center center fixed;
       background-size: cover;
       color: #e0e0e0;
       min-height: 100vh;
@@ -203,13 +203,13 @@
 </head>
 <body>
   <header role="banner" aria-label="Olive Music Discord Bot Branding">
-    <a href="/index.html" class="back-button" aria-label="Go back to homepage">
+    <a href="/" class="back-button" aria-label="Go back to homepage">
       <svg aria-hidden="true" focusable="false" viewBox="0 0 24 24">
         <path d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
       </svg>
       Back
     </a>
-    <img src="https://cdn.discordapp.com/attachments/1385741129777021050/1402163637262483516/olivemusic.png?ex=689392e6&is=68924166&hm=832143657860dc2e6c38661530ab2c831b502d4e687171e9ba8d0cf545375ae2&" alt="Olive Music bot profile picture" width="120" height="120" />
+    <img src="https://files.catbox.moe/54wjfq.png" alt="Olive Music bot profile picture" width="120" height="120" />
     <h1>Olive Music</h1>
     <p class="subtitle">Your friendly Discord music bot delivering quality sound & effortless jam sessions.</p>
   </header>
@@ -218,19 +218,23 @@
     <section id="about-bot" tabindex="0">
       <h2>About Olive Music</h2>
       <p>
-        Olive Music is a powerful and reliable Discord music bot designed to elevate your server's musical experience.
+        Olive Music is a powerful and reliable Discord music bot, powered by Vocard, designed to elevate your server's musical experience.
         With easy-to-use commands and stable performance, it enables seamless streaming from multiple platforms, including YouTube, Spotify, SoundCloud, and more.
       </p>
       <p>
         Whether you're hosting a gaming night, a study session, or just chilling with friends, Olive Music will keep the vibe flowing with crystal-clear audio and smart queue management.
       </p>
+      <p>
+        Note that Olive Music is currently available for testing on Oliver's Lounge as well as Hashtag's HQ. General availability will be available later. Custom Bot option will be available at a later date as a paid product.
+      </p>
       <h3>Key Features:</h3>
       <ul>
-        <li>Supports high quality music playback from various sources</li>
+        <li>Supports high quality music playback from various sources (Spotify, Apple Music, etc.)</li>
         <li>Playlist & queue management with intuitive controls</li>
         <li>Loop, shuffle, skip, and volume control commands</li>
-        <li>Search and play songs by keywords</li>
+        <li>Search and play songs by keywords or by copy and pasting the song link</li>
         <li>Multi-server support with minimal latency</li>
+        <li>Control using website</li>
         <li>Friendly & responsive support community</li>
       </ul>
     </section>
@@ -250,17 +254,17 @@
         <h3 id="privacy-title">Privacy Policy</h3>
         <p><strong>Data Collection:</strong> Olive Music collects no personal data directly. Any data handled is limited to what Discord provides for bot function (e.g., user IDs, usernames in servers).</p>
         <p><strong>Usage Data:</strong> We may log anonymized usage metrics to improve performance and fix bugs.</p>
-        <p><strong>Third-Party Services:</strong> Music streaming services and Discord handle their own privacy policies; please review those accordingly.</p>
-        <p><strong>Data Sharing:</strong> No personal data is shared or sold to third parties.</p>
+        <p><strong>Third-Party Services:</strong> Music streaming is handeled by another server, although no data other than the song link is sent to to the server.</p>
+        <p><strong>Data Sharing:</strong> No personal data is shared or sold to third parties at all.</p>
         <p><strong>Security:</strong> We take reasonable measures to protect any collected data pertinent to bot operation.</p>
         <p><strong>Children's Privacy:</strong> The bot is not intended for use by children under 13.</p>
-        <p><strong>Policy Updates:</strong> Privacy policy may change; updates will be posted here.</p>
+        <p><strong>Policy Updates:</strong> Privacy policy may change from time to time; updates will be posted here.</p>
       </div>
     </section>
   </main>
 
   <footer role="contentinfo">
-    <p>Olive Music icon made by Arcadowski | &copy; 2024 Olive Music Discord Bot</p>
+    <p>Olive Music icon made by Arcadowski | &copy; 2024 Oliver And Co.</p>
   </footer>
 </body>
 </html>
