--- a/bellamusix.html
+++ b/bellamusix.html
@@ -347,7 +347,7 @@
 </head>
 <body>
   <main class="container" role="main" aria-label="Bella Musix main content">
-    <a href="/index.html" class="back-button" aria-label="Go back to home page">
+    <a href="/" class="back-button" aria-label="Go back to home page">
       <svg viewBox="0 0 20 20" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
         <path d="M13 16l-6-6 6-6" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
       </svg>
