--- a/olivemusic.html
+++ b/olivemusic.html
@@ -27,7 +27,7 @@
       padding: 40px 20px 20px 20px;
       background-color: rgba(0,0,0,0.45);
       backdrop-filter: saturate(150%) blur(8px);
-      border-bottom: 2px solid #798942;
+      border-bottom: 2px solid #351f7f;
       position: relative;
     }
 
@@ -36,13 +36,13 @@
       position: absolute;
       top: 24px;
       left: 24px;
-      background-color: #798942dd;
-      color: #1f2d14;
+      background-color: #351f7fdd;
+      color: #e8e4ff;
       font-weight: 600;
       text-decoration: none;
       padding: 8px 14px;
       border-radius: 6px;
-      box-shadow: 0 0 8px #8ca157cc;
+      box-shadow: 0 0 8px #2e268acc;
       transition: background-color 0.3s ease, color 0.3s ease;
       user-select: none;
       display: inline-flex;
@@ -51,10 +51,10 @@
     }
     .back-button:hover,
     .back-button:focus {
-      background-color: #a3bb59;
-      color: #0f1906;
+      background-color: #2e268a;
+      color: #f0edff;
       outline: none;
-      box-shadow: 0 0 12px #9fbf54cc;
+      box-shadow: 0 0 12px #262c94cc;
     }
     .back-button svg {
       margin-right: 6px;
@@ -68,24 +68,24 @@
       height: 120px;
       border-radius: 50%;
       object-fit: contain;
-      border: 3px solid #798942;
-      background-color: #1f2d14;
+      border: 3px solid #351f7f;
+      background-color: #1a0f3d;
       margin-bottom: 20px;
-      box-shadow: 0 0 15px #8ca157aa;
+      box-shadow: 0 0 15px #2e268aaa;
     }
 
     header h1 {
       font-weight: 600;
       font-size: 3rem;
       margin-bottom: 8px;
-      color: #a3bb59;
-      text-shadow: 0 0 6px #a3bb59aa;
+      color: #1c4aa5;
+      text-shadow: 0 0 6px #1c4aa5aa;
     }
 
     header p.subtitle {
       font-weight: 300;
       font-size: 1.3rem;
-      color: #d4d9b7;
+      color: #d4d9ff;
       max-width: 600px;
       margin: 0 auto;
     }
@@ -96,16 +96,16 @@
       margin: 40px auto 60px;
       background-color: rgba(0,0,0,0.5);
       border-radius: 12px;
-      box-shadow: 0 0 32px #667744aa inset;
+      box-shadow: 0 0 32px #351f7faa inset;
       padding: 30px 40px;
-      color: #dbe6b6;
+      color: #e6e4ff;
     }
 
     main h2 {
-      color: #a3bb59;
+      color: #1c4aa5;
       margin-bottom: 18px;
       font-weight: 600;
-      border-bottom: 2px solid #8ca157;
+      border-bottom: 2px solid #2e268a;
       padding-bottom: 6px;
     }
 
@@ -135,17 +135,17 @@
 
     section.tos-privacy > div {
       flex: 1 1 420px;
-      background-color: rgba(27, 38, 10, 0.7);
+      background-color: rgba(26, 15, 61, 0.7);
       padding: 20px 24px;
       border-radius: 10px;
-      box-shadow: 0 0 20px #809e3eaa inset;
+      box-shadow: 0 0 20px #262c94aa inset;
       max-height: 450px;
       overflow-y: auto;
-      color: #e8e8d5;
+      color: #e8e8ff;
     }
 
     section.tos-privacy > div h3 {
-      border-bottom: 2px solid #a3bb59;
+      border-bottom: 2px solid #1c4aa5;
       margin-bottom: 12px;
       padding-bottom: 6px;
       font-weight: 600;
@@ -156,9 +156,9 @@
       text-align: center;
       padding: 14px 10px;
       background-color: rgba(0, 0, 0, 0.55);
-      color: #a8b182dd;
+      color: #b8b5dddd;
       font-size: 0.9rem;
-      border-top: 1px solid #798942;
+      border-top: 1px solid #351f7f;
       user-select: none;
     }
 
@@ -168,7 +168,7 @@
     }
 
     section.tos-privacy > div::-webkit-scrollbar-thumb {
-      background-color: #9fbf54aa;
+      background-color: #262c94aa;
       border-radius: 4px;
     }
 
