--- a/olivemusic.html
+++ b/olivemusic.html
@@ -225,7 +225,7 @@
         Whether you're hosting a gaming night, a study session, or just chilling with friends, Olive Music will keep the vibe flowing with crystal-clear audio and smart queue management.
       </p>
       <p>
-        Note that Olive Music is currently available for testing on Oliver's Lounge as well as Hashtag's HQ. General availability will be available later. Custom Bot option will be available at a later date as a paid product.
+        Note that Olive Music is currently available for testing on <a href="https://discord.gg/gZ7uzBzSDZ">Oliver's Lounge</a> as well as <a href="https://discord.gg/pYEEnYCW2u">The Hashtag HQ</a>. General availability will be available later. General availability will be available later. Custom Bot option will be available at a later date as a paid product.
       </p>
       <h3>Key Features:</h3>
       <ul>
